# FinanceMCP

./: README.md  eventstore.py  main.py  pyproject.toml  run_server_and_inspector.sh  test_tools.py
Tools/: __init__.py  market_analysis.py  market_data.py  options_analysis.py
