[project]
name = "financemcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.11.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
    "yfinance>=0.2.65",
    "pymongo[srv]>=4.14.1",
    "ta>=0.11.0",
    "vollib",
    "pytest",
]
