[project]
name = "financemcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.11.0",
    "yfinance>=0.2.65",
    "pymongo[srv]>=4.14.1",
    "motor>=3.7.0",
    "ta>=0.11.0",
    "pytest",
    "pytest-asyncio",
    "python-dotenv",
    "redis",
]
